import org.gradle.api.tasks.testing.logging.TestLogEvent

plugins {
    id 'java'
    id 'jacoco'
    id 'io.freefair.lombok' version '9.4.0'
    id "com.gorylenko.gradle-git-properties" version "2.4.2"
    id 'uk.gov.laa.springboot.laa-spring-boot-gradle-plugin'
    id 'com.avast.gradle.docker-compose' version '0.17.12'
    id 'io.sentry.jvm.gradle' version '5.12.2'
}

def versions = [
        sentry : '8.28.0'
]

configurations.all {
    // Fix for SNYK-JAVA-COMFASTERXMLJACKSONCORE-15907551 (CVE) - updated to 2.21.2
    // Fix for SNYK-JAVA-TOOLSJACKSONCORE-15907550 (CVE) - updated to 3.1.1
    // Fix for Spring Security vulnerability SNYK-JAVA-ORGSPRINGFRAMEWORKSECURITY-15701796 (Cache Containing Sensitive Information)
    // Fix for Spring Framework vulnerability SNYK-JAVA-ORGSPRINGFRAMEWORK-15701845 (Directory Traversal)
    resolutionStrategy {
        force 'com.fasterxml.jackson.core:jackson-core:2.21.2'
        force 'com.fasterxml.jackson.core:jackson-databind:2.21.2'
        force 'tools.jackson.core:jackson-core:3.1.1'
        force 'tools.jackson.core:jackson-databind:3.1.1'
        force 'tools.jackson:jackson-bom:3.1.1'
        force 'org.springframework.security:spring-security-config:7.0.5'
        force 'org.springframework.security:spring-security-web:7.0.5'
    }
}

sourceSets {
    testUtilities {
        java {
            srcDir 'src/testUtilities/java'
        }
        resources {
            srcDir 'src/testUtilities/resources'
        }
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
    test {
        compileClasspath += sourceSets.testUtilities.output
        runtimeClasspath += sourceSets.testUtilities.output
    }
    integrationTest {
        compileClasspath += sourceSets.testUtilities.output
        runtimeClasspath += sourceSets.testUtilities.output
    }
}

configurations {
    testUtilitiesImplementation.extendsFrom testImplementation
    testUtilitiesRuntimeOnly.extendsFrom testRuntimeOnly

    testUtilitiesRuntimeElements {
        canBeConsumed = true
        canBeResolved = false
        extendsFrom testUtilitiesImplementation, testUtilitiesRuntimeOnly
        attributes {
            attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
            attribute(LibraryElements.LIBRARY_ELEMENTS_ATTRIBUTE, objects.named(LibraryElements, LibraryElements.JAR))
        }
    }
}

tasks.register('testUtilitiesJar', Jar) {
    archiveClassifier = 'test-utilities'
    from sourceSets.testUtilities.output
}

artifacts {
    testUtilitiesRuntimeElements(tasks.named('testUtilitiesJar'))
}

dockerCompose {
    useComposeFiles = ['../docker-compose.yml']
    // workaround https://github.com/avast/gradle-docker-compose-plugin/issues/435
    def dockerPath = ["/usr/bin/docker", "/usr/local/bin/docker"].find {
        new File(it).exists()
    }
    if (dockerPath) {
        dockerExecutable.set(dockerPath)
    }
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

tasks.named('integrationTest') {
    useJUnitPlatform()
    jacoco {
        destinationFile = layout.buildDirectory.file("jacoco/integrationTest.exec").get().asFile
    }

    testLogging {
        events TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.FAILED
        exceptionFormat = 'full'
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }
}

tasks.register('infrastructureTest', Test) {
    description = 'Runs @SmokeTest-annotated tests against a live deployed environment'
    group = 'verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath

    // Unconditionally use infrastructure mode — no flag needed
    systemProperty 'test.mode', 'infrastructure'

    filter {
        includeTestsMatching 'uk.gov.justice.laa.dstew.access.controller.*'
    }
    useJUnitPlatform {
        includeTags 'smoke'
    }

    ['LAA_SMOKE_ACCESS_API_URL',
     'LAA_SMOKE_ACCESS_DB_URL',
     'LAA_SMOKE_ACCESS_DB_USERNAME',
     'LAA_SMOKE_ACCESS_DB_PASSWORD',
     'FEATURE_DISABLE_SECURITY',
     'FEATURE_ENABLE_DEV_TOKENS'].each { key ->
        def value = System.getenv(key)
        if (value) environment key, value
    }

    testLogging {
        events TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.FAILED
        exceptionFormat = 'full'
        showExceptions = true
        showCauses = true
        showStackTraces = true
        showStandardStreams = true
    }
}

jacoco {
    toolVersion = "0.8.13"
}

//so that we load properties from gradle properties
task copyFileFromRootProject(type: Copy) {
    from "${rootProject.projectDir}/gradle.properties"
    into 'build/resources/main'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/AccessApp.class', '**/generated/**', '**/*Generated*.*', '**/export/generated/**', '**/*_.class'])
        }))
    }
}

jacocoTestCoverageVerification {
    dependsOn integrationTest

    executionData(
        layout.buildDirectory.file("jacoco/test.exec"),
        layout.buildDirectory.file("jacoco/integrationTest.exec")
    )

    afterEvaluate {
        classDirectories.setFrom(files(sourceSets.main.output.classesDirs.collect {
            fileTree(dir: it, exclude: ['**/AccessApp.class', '**/generated/**', '**/*Generated*.*', '**/export/generated/**', '**/*_.class'])
        }))
    }

    violationRules {
        failOnViolation = true

        rule {
            element = 'CLASS'
            limit {
                counter = 'LINE'
                minimum = 0.9
            }
            limit {
                counter = 'BRANCH'
                minimum = 0.9
            }
        }
    }
}

spotlessApply.mustRunAfter clean
build.mustRunAfter spotlessApply
tasks.named('integrationTest').configure { mustRunAfter build }
jacocoTestCoverageVerification.mustRunAfter tasks.named('integrationTest')

tasks.register('preflightCheck') {
    description = 'Runs clean, spotlessApply, build, integrationTest and jacocoTestCoverageVerification'
    group = 'verification'
    dependsOn clean, spotlessApply, build, tasks.named('integrationTest'), jacocoTestCoverageVerification
}

dependencyManagement {
    // Fix for SNYK-JAVA-TOOLSJACKSONCORE-15907550 (CVE) - updated to 3.1.1
    imports {
        mavenBom 'tools.jackson:jackson-bom:3.1.1'
        mavenBom 'io.netty:netty-bom:4.2.13.Final'
    }
    dependencies {
        dependencySet(group: 'io.sentry', version: versions.sentry) {
            entry 'sentry-spring-boot-starter'
            entry 'sentry-logback'
        }
    }
}

// Workaround: Disable gradle-git-properties due to compatibility issues with Java 21+ and newer Gradle
tasks.named('generateGitProperties') {
    enabled = false
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}


dependencies {
    implementation project(':data-access-api')
    implementation project(':data-access-shared')

    // Remove explicit Spring Security and Spring Core versions - let Spring Boot 4 manage them
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation('org.springframework.boot:spring-boot-starter-security') {
        exclude group: 'org.springframework.security', module: 'spring-security-config'
        exclude group: 'org.springframework.security', module: 'spring-security-web'
    }
    implementation('org.springframework.boot:spring-boot-starter-oauth2-resource-server') {
        exclude group: 'org.springframework.security', module: 'spring-security-web'
    }
    implementation 'org.springframework.security:spring-security-config'
    implementation 'org.springframework.security:spring-security-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude group: 'com.google.code.gson', module: 'gson'
    }
    implementation('org.springframework.boot:spring-boot-starter-webmvc') {
        exclude group: 'com.google.code.gson', module: 'gson'
    }

    //fix https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-15789756
    implementation 'io.netty:netty-codec-http:4.2.13.Final'
    //fix https://security.snyk.io/vuln/SNYK-JAVA-IONETTY-15789758
    implementation 'io.netty:netty-codec-http2:4.2.13.Final'
    //fix https://security.snyk.io/vuln/SNYK-JAVA-ORGAPACHETOMCATEMBED-16643259
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.22'
    // Fix for SNYK-JAVA-COMFASTERXMLJACKSONCORE-15907551 (CVE) - updated to 2.21.2
    implementation 'com.fasterxml.jackson.core:jackson-core:2.21.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.2'
    implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2') {
        exclude group: 'tools.jackson.core'
    }
    implementation("org.springframework.boot:spring-boot-starter-flyway:4.0.6")
    implementation("org.flywaydb:flyway-database-postgresql")

    // Source: https://mvnrepository.com/artifact/com.azure.spring/spring-cloud-azure-starter-active-directory
    // Note: Version 7.0.0 may not be compatible with Spring Boot 4, check for updated version
    implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:7.2.0'
    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'

    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'net.ttddyy.observation:datasource-micrometer-spring-boot:2.2.0'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.hibernate.orm:hibernate-processor:7.3.2.Final'
    implementation 'org.javers:javers-core:7.10.0'

    runtimeOnly 'org.postgresql:postgresql:42.7.11'
    runtimeOnly "org.flywaydb:flyway-database-postgresql"

    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'org.instancio:instancio-junit:5.5.1'
    testImplementation 'net.datafaker:datafaker:2.5.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation "org.testcontainers:testcontainers-junit-jupiter:2.0.1"
    testImplementation 'org.testcontainers:postgresql:1.21.3'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers:4.0.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    // https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-4.0-Migration-Guide#test-code
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Security fix for SNYK-JAVA-ORGAPACHECOMMONS-10734078 (CVE-2025-48924)
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // Sentry
    implementation platform("io.sentry:sentry-bom:$versions.sentry")
    implementation "io.sentry:sentry-logback:$versions.sentry"
    implementation "io.sentry:sentry-spring-boot-4:$versions.sentry"
}